# mstream_music

./: .gitignore  .metadata  ANDROID_AUTO_SMOKE_TEST.md  DESKTOP_PORT_PLAN.md  DESKTOP_UI_POLISH.md  IROH_KEEPALIVE_BATTERY.md  IROH_TRANSPORT_PLAN.md  PLAY_COMPLIANCE.md  README.md  TEST_PLAN.md  VISUALIZER_CAST_STATE.md  analysis_options.yaml  l10n.yaml  pubspec.yaml  release.sh
.github/workflows/: release.yml
android/: build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/cpp/: CMakeLists.txt  audio_texture.cpp  audio_texture.h  engine.h  projectm_engine.cpp  projectm_engine.h  shader_engine.cpp  shader_engine.h  visualizer_bridge.cpp
android/app/src/main/cpp/include/projectM-4/: version.h
assets/shaders/: 01-spectrum-bars.glsl  02-audio-tunnel.glsl  03-plasma-pulse.glsl  04-cyber-fuji.glsl  05-hex-marching.glsl  06-4d-beats.glsl  07-neonwave-sunrise.glsl  08-neonwave-sunset.glsl  09-mountainbytes.glsl  10-neon-hexagons.glsl
integration_test/: add_server_test.dart  browse_album_songs_test.dart  browse_albums_test.dart  browse_artists_test.dart  browse_rated_test.dart  browse_recent_test.dart  cold_start_test.dart  playback_progress_test.dart  playlist_create_test.dart  screenshot_tour.dart  screenshot_tour_test.dart  search_categories_test.dart  search_test.dart  settings_persist_test.dart
integration_test/helpers/: test_helpers.dart
ios/Runner/: AppDelegate.swift  Info.plist  PrivacyInfo.xcprivacy
ios/Runner.xcodeproj/: project.pbxproj
lib/: app_version.dart  build_variant.dart  main.dart
lib/admin/: admin_api.dart  admin_launcher.dart  admin_main.dart  admin_screen.dart  admin_session.dart  admin_theme.dart  admin_widgets.dart  login_screen.dart
lib/desktop/: desktop_integration.dart  embedded_server.dart
lib/l10n/: app_de.arb  app_en.arb  app_es.arb  app_fr.arb  app_it.arb  app_ja.arb  app_localizations.dart  app_localizations_de.dart  app_localizations_en.dart  app_localizations_es.dart  app_localizations_fr.dart  app_localizations_it.dart  app_localizations_ja.dart  app_localizations_pl.dart  app_localizations_pt.dart  app_localizations_ru.dart  app_localizations_zh.dart  app_pl.arb  app_pt.arb  app_ru.arb  app_zh.arb  enum_labels.dart
lib/media/: audio_stuff.dart  auto_browse.dart  auto_buckets.dart  cast_art.dart  cast_log.dart  cast_origin.dart  cast_target.dart  chromecast_discoverer.dart  chromecast_playback_backend.dart  common.dart  desktop_chromecast_backend.dart  desktop_chromecast_discoverer.dart  device_discoverer.dart  dlna_discoverer.dart  dlna_playback_backend.dart  emulated_playlist_backend.dart  local_media_server.dart  local_playback_backend.dart  playback_backend.dart  visualizer_cast_config.dart  visualizer_cast_spike.dart
lib/native/: audio_capture.dart  battery_optimization.dart  iroh_tunnel.dart  projectm_bindings.dart  projectm_controller.dart  projectm_desktop.dart  shader_params.dart  user_shaders.dart  visualizer_bridge.dart  visualizer_presets.dart  viz_decoder.dart
lib/objects/: auto_download_entry.dart  discovery.dart  display_item.dart  download_tracker.dart  lyrics.dart  metadata.dart  player_layout.dart  playlist.dart  server.dart
lib/screens/: about_screen.dart  add_media_sheet.dart  add_server.dart  add_torrent_screen.dart  album_detail_view.dart  attributions_screen.dart  auto_dj.dart  browser.dart  desktop_onboarding.dart  diagnostics_screen.dart  discover_screen.dart  downloads.dart  eq_screen.dart  imported_shaders_screen.dart  lyrics_screen.dart  manage_server.dart  metadata_screen.dart  playlists_screen.dart  settings_screen.dart  share_playlist_dialog.dart  sonic_path_screen.dart  transcode_screen.dart  visualizer_screen.dart  ytdl_sheet.dart
lib/server/: server_binary_manager.dart  server_controller.dart  server_log.dart  server_release.dart
lib/singletons/: api.dart  app_messenger.dart  auto_dj_manager.dart  auto_download_ledger.dart  browser_list.dart  cast_manager.dart  downloads.dart  file_explorer.dart  lan_discovery.dart  log_manager.dart  lol.dart  media.dart  migration_manager.dart  playlists.dart  queue_store.dart  server_list.dart  settings.dart  sleep_timer.dart  transcode.dart  visualizer_audio.dart  ytdl_manager.dart
lib/theme/: velvet_theme.dart
lib/util/: ambient_color.dart  app_data_dir.dart  camelot.dart  connectivity_probe.dart  http_client.dart  image_cache.dart  insecure_tls_channel.dart  media_format.dart  mstream_auth.dart  queue_actions.dart  self_signed_overrides.dart  server_compat.dart  startup_view.dart  stream_url.dart  torrent_meta.dart  wake_guard.dart
lib/visualizer/: projectm_screen.dart  shader_visualizer_screen.dart  spectrum_source.dart  viz_renderer.dart
lib/widgets/: accent_color_sheet.dart  album_grid.dart  browser_toolbar.dart  cast_picker_sheet.dart  desktop_shell.dart  desktop_toast.dart  discover_queue_bar.dart  eq_bars_spinner.dart  iroh_pairing_qr_sheet.dart  iroh_repair_sheet.dart  iroh_scanner.dart  letter_strip.dart  local_search_bar.dart  media_shortcuts.dart  more_actions_sheet.dart  player_panel.dart  playlist_name_dialog.dart  playlist_picker_sheet.dart  queue_list.dart  settings_controls.dart  sleep_timer_sheet.dart  (+4 more)
rust/iroh_tunnel/: .gitignore  Cargo.toml  README.md  build-android.sh  build-ios.sh
rust/iroh_tunnel/interop/: harness.mjs  package.json  pairing-server.mjs
rust/iroh_tunnel/src/: android_init.rs  apple_compat.rs  c_api.rs  ffi.rs  lib.rs
rust/viz_decoder/: .gitignore  Cargo.toml  build-ios.sh  build-macos.sh
rust/viz_decoder/src/: c_api.rs  engine.rs  http_source.rs  lib.rs
rust/viz_decoder/tests/: decode_e2e.rs
shader_research/: README.md  cyber-fuji-reactivity-notes.md  microphone-shaders.csv  mrange-shaders.csv
shaders/: visualizer_spectrum.frag
test/: torrent_meta_test.dart  widget_test.dart
tool/: audio_capture_probe.dart  cast_discovery_probe.dart  server_binary_probe.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/audio_capture/: CMakeLists.txt  audio_capture.cpp
windows/projectm_shim/: CMakeLists.txt  projectm_desktop.cpp
(+90 files in other folders)
